projeto2/parser.output
Estado 141 conflitos: 2 de deslocamento/redução
Estado 172 conflitos: 2 de deslocamento/redução


Gramática

    0 $accept: programa $end

    1 programa: linhas

    2 linhas: linha
    3       | linhas linha

    4 linha: atribuicao T_NL
    5      | declaracao T_NL
    6      | dec_hashes
    7      | dec_funcao T_NL
    8      | def_funcao T_NL
    9      | condicao T_NL
   10      | seleciona T_NL
   11      | for_laco T_NL
   12      | do_while_laco T_NL
   13      | while_laco T_NL
   14      | chamada T_NL
   15      | interpretacao T_NL
   16      | T_NL

   17 atribuicao: var_arranjo T_EQUAL expressao

   18 var_arranjo: var
   19            | chamada
   20            | referencia var
   21            | referencia chamada

   22 declaracao: tipo variaveis

   23 variaveis: variavel
   24          | variaveis T_COMMA variavel
   25          | def_arranjo
   26          | variaveis T_COMMA def_arranjo

   27 variavel: atribuicao
   28         | var
   29         | referencia var

   30 def_arranjo: dec_arranjo

   31 dec_arranjo: T_VAR T_OPEN expressao T_COMMA expressao T_CLOSE
   32            | referencia T_VAR T_OPEN expressao T_COMMA expressao T_CLOSE
   33            | T_VAR T_OPEN expressao T_CLOSE
   34            | referencia T_VAR T_OPEN expressao T_CLOSE

   35 arranjo: T_VAR T_OPEN expressao T_CLOSE
   36        | referencia T_VAR T_OPEN expressao T_CLOSE

   37 arranjo_duplo: T_VAR T_OPEN expressao T_COMMA expressao T_CLOSE
   38              | referencia T_VAR T_OPEN expressao T_COMMA expressao T_CLOSE

   39 chamada: T_VAR T_OPEN arg_null T_CLOSE

   40 arg_null: argumentos
   41         | %empty

   42 argumentos: argumento
   43           | argumento T_COMMA argumentos

   44 argumento: expressao

   45 dec_hashes: tipo T_COLON tipo hashes

   46 hashes: def_hash
   47       | hashes T_COMMA def_hash

   48 def_hash: hash

   49 condicao: T_IF expressao T_NL T_THEN T_OPEN_KEY T_NL linhas_null T_CLOSE_KEY senao

   50 senao: T_ELSE T_OPEN_KEY T_NL linhas_null T_CLOSE_KEY
   51      | %empty

   52 seleciona: T_SWITCH T_OPEN expressao T_CLOSE T_OPEN_KEY T_NL caso T_NL T_CLOSE_KEY

   53 caso: T_CASE expressao T_OPEN_KEY linhas_null T_CLOSE_KEY T_NL caso
   54     | T_CASE expressao T_NL caso
   55     | T_DEFAULT T_OPEN_KEY linhas_null T_CLOSE_KEY

   56 for_laco: T_FOR atrib_null T_COMMA expressao T_COMMA atrib_null T_OPEN_KEY T_NL linhas_null T_CLOSE_KEY

   57 linhas_null: linhas
   58            | %empty

   59 do_while_laco: T_DO T_OPEN_KEY T_NL linhas T_CLOSE_KEY T_WHILE expressao

   60 while_laco: T_WHILE expressao T_OPEN_KEY T_NL linhas T_CLOSE_KEY

   61 atrib_null: atribuicao
   62           | %empty

   63 dec_funcao: tipo T_FUN T_VAR T_OPEN param_null T_CLOSE
   64           | tipo T_OPEN T_CLOSE T_FUN T_VAR T_OPEN param_null T_CLOSE
   65           | tipo T_OPEN T_CLOSE T_OPEN T_CLOSE T_FUN T_VAR T_OPEN param_null T_CLOSE
   66           | tipo T_COLON tipo T_FUN T_VAR T_OPEN param_null T_CLOSE

   67 def_funcao: tipo T_FUN T_VAR T_OPEN param_null T_CLOSE T_OPEN_KEY T_NL linhas_funcao T_RET retorno T_NL T_CLOSE_KEY
   68           | tipo T_OPEN T_CLOSE T_FUN T_VAR T_OPEN param_null T_CLOSE T_OPEN_KEY T_NL linhas_funcao T_RET retorno T_NL T_CLOSE_KEY
   69           | tipo T_OPEN T_CLOSE T_OPEN T_CLOSE T_FUN T_VAR T_OPEN param_null T_CLOSE T_OPEN_KEY T_NL linhas_funcao T_RET retorno T_NL T_CLOSE_KEY
   70           | tipo T_COLON tipo T_FUN T_VAR T_OPEN param_null T_CLOSE T_OPEN_KEY T_NL linhas_funcao T_RET retorno T_NL T_CLOSE_KEY

   71 linhas_funcao: linhas
   72              | %empty

   73 param_null: parametros
   74           | %empty

   75 parametros: parametro
   76           | parametro T_COMMA parametros

   77 parametro: tipo var
   78          | tipo referencia var
   79          | tipo arranjo
   80          | tipo arranjo_duplo
   81          | tipo T_COLON tipo hash

   82 retorno: expressao

   83 expressao: primitiva
   84          | chamada
   85          | T_MINUS expressao
   86          | T_NOT expressao
   87          | T_CAST_INT expressao
   88          | T_CAST_FLOAT expressao
   89          | T_CAST_BOOL expressao
   90          | T_OPEN expressao T_CLOSE
   91          | T_REF expressao
   92          | T_ADDR expressao
   93          | expressao T_PLUS expressao
   94          | expressao T_MINUS expressao
   95          | expressao T_TIMES expressao
   96          | expressao T_DIV expressao
   97          | expressao T_AND expressao
   98          | expressao T_OR expressao
   99          | expressao T_EQUAL2 expressao
  100          | expressao T_DIF expressao
  101          | expressao T_HIGHER expressao
  102          | expressao T_HIGH expressao
  103          | expressao T_LOWER expressao
  104          | expressao T_LOW expressao
  105          | T_OPEN expressao T_ATRIB_ASK expressao T_COLON expressao T_CLOSE

  106 tipo: T_TYPE_INT
  107     | T_TYPE_FLOAT
  108     | T_TYPE_BOOL

  109 primitiva: var
  110          | T_BOOL
  111          | T_INT
  112          | T_FLOAT

  113 var: T_VAR

  114 hash: T_VAR
  115     | referencia T_VAR

  116 referencia: T_REF
  117           | referencia T_REF

  118 interpretacao: T_CALC expressao


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256)
T_FLOAT (258) 112
T_INT (259) 111
T_BOOL (260) 110
T_VAR (261) 31 32 33 34 35 36 37 38 39 63 64 65 66 67 68 69 70 113
    114 115
T_TYPE_INT (262) 106
T_TYPE_FLOAT (263) 107
T_TYPE_BOOL (264) 108
T_NL (265) 4 5 7 8 9 10 11 12 13 14 15 16 49 50 52 53 54 56 59 60 67
    68 69 70
T_OPEN (266) 31 32 33 34 35 36 37 38 39 52 63 64 65 66 67 68 69 70
    90 105
T_CLOSE (267) 31 32 33 34 35 36 37 38 39 52 63 64 65 66 67 68 69 70
    90 105
T_OPEN_KEY (268) 49 50 52 53 55 56 59 60 67 68 69 70
T_CLOSE_KEY (269) 49 50 52 53 55 56 59 60 67 68 69 70
T_EQUAL (270) 17
T_COMMA (271) 24 26 31 32 37 38 43 47 56 76
T_COLON (272) 45 66 70 81 105
T_PLUS (273) 93
T_MINUS (274) 85 94
T_TIMES (275) 95
T_DIV (276) 96
T_NOT (277) 86
T_AND (278) 97
T_OR (279) 98
T_EQUAL2 (280) 99
T_DIF (281) 100
T_HIGHER (282) 101
T_HIGH (283) 102
T_LOWER (284) 103
T_LOW (285) 104
T_CAST_INT (286) 87
T_CAST_FLOAT (287) 88
T_CAST_BOOL (288) 89
T_ADDR (289) 92
T_IF (290) 49
T_THEN (291) 49
T_ELSE (292) 50
T_SWITCH (293) 52
T_CASE (294) 53 54
T_DEFAULT (295) 55
T_FOR (296) 56
T_FUN (297) 63 64 65 66 67 68 69 70
T_RET (298) 67 68 69 70
T_ATRIB_ASK (299) 105
T_DO (300) 59
T_WHILE (301) 59 60
T_REF (302) 91 116 117
T_CALC (303) 118
UMINUS (304)


Não terminais com as regras onde eles aparecem

$accept (50)
    à esquerda: 0
programa (51)
    à esquerda: 1, à direita: 0
linhas (52)
    à esquerda: 2 3, à direita: 1 3 57 59 60 71
linha (53)
    à esquerda: 4 5 6 7 8 9 10 11 12 13 14 15 16, à direita: 2 3
atribuicao (54)
    à esquerda: 17, à direita: 4 27 61
var_arranjo (55)
    à esquerda: 18 19 20 21, à direita: 17
declaracao (56)
    à esquerda: 22, à direita: 5
variaveis (57)
    à esquerda: 23 24 25 26, à direita: 22 24 26
variavel (58)
    à esquerda: 27 28 29, à direita: 23 24
def_arranjo (59)
    à esquerda: 30, à direita: 25 26
dec_arranjo (60)
    à esquerda: 31 32 33 34, à direita: 30
arranjo (61)
    à esquerda: 35 36, à direita: 79
arranjo_duplo (62)
    à esquerda: 37 38, à direita: 80
chamada (63)
    à esquerda: 39, à direita: 14 19 21 84
arg_null (64)
    à esquerda: 40 41, à direita: 39
argumentos (65)
    à esquerda: 42 43, à direita: 40 43
argumento (66)
    à esquerda: 44, à direita: 42 43
dec_hashes (67)
    à esquerda: 45, à direita: 6
hashes (68)
    à esquerda: 46 47, à direita: 45 47
def_hash (69)
    à esquerda: 48, à direita: 46 47
condicao (70)
    à esquerda: 49, à direita: 9
senao (71)
    à esquerda: 50 51, à direita: 49
seleciona (72)
    à esquerda: 52, à direita: 10
caso (73)
    à esquerda: 53 54 55, à direita: 52 53 54
for_laco (74)
    à esquerda: 56, à direita: 11
linhas_null (75)
    à esquerda: 57 58, à direita: 49 50 53 55 56
do_while_laco (76)
    à esquerda: 59, à direita: 12
while_laco (77)
    à esquerda: 60, à direita: 13
atrib_null (78)
    à esquerda: 61 62, à direita: 56
dec_funcao (79)
    à esquerda: 63 64 65 66, à direita: 7
def_funcao (80)
    à esquerda: 67 68 69 70, à direita: 8
linhas_funcao (81)
    à esquerda: 71 72, à direita: 67 68 69 70
param_null (82)
    à esquerda: 73 74, à direita: 63 64 65 66 67 68 69 70
parametros (83)
    à esquerda: 75 76, à direita: 73 76
parametro (84)
    à esquerda: 77 78 79 80 81, à direita: 75 76
retorno (85)
    à esquerda: 82, à direita: 67 68 69 70
expressao (86)
    à esquerda: 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99
    100 101 102 103 104 105, à direita: 17 31 32 33 34 35 36 37 38
    44 49 52 53 54 56 59 60 82 85 86 87 88 89 90 91 92 93 94 95 96
    97 98 99 100 101 102 103 104 105 118
tipo (87)
    à esquerda: 106 107 108, à direita: 22 45 63 64 65 66 67 68 69
    70 77 78 79 80 81
primitiva (88)
    à esquerda: 109 110 111 112, à direita: 83
var (89)
    à esquerda: 113, à direita: 18 20 28 29 77 78 109
hash (90)
    à esquerda: 114 115, à direita: 48 81
referencia (91)
    à esquerda: 116 117, à direita: 20 21 29 32 34 36 38 78 115 117
interpretacao (92)
    à esquerda: 118, à direita: 15


Estado 0

    0 $accept: . programa $end

    T_VAR         deslocar, e ir ao estado 1
    T_TYPE_INT    deslocar, e ir ao estado 2
    T_TYPE_FLOAT  deslocar, e ir ao estado 3
    T_TYPE_BOOL   deslocar, e ir ao estado 4
    T_NL          deslocar, e ir ao estado 5
    T_IF          deslocar, e ir ao estado 6
    T_SWITCH      deslocar, e ir ao estado 7
    T_FOR         deslocar, e ir ao estado 8
    T_DO          deslocar, e ir ao estado 9
    T_WHILE       deslocar, e ir ao estado 10
    T_REF         deslocar, e ir ao estado 11
    T_CALC        deslocar, e ir ao estado 12

    programa       ir ao estado 13
    linhas         ir ao estado 14
    linha          ir ao estado 15
    atribuicao     ir ao estado 16
    var_arranjo    ir ao estado 17
    declaracao     ir ao estado 18
    chamada        ir ao estado 19
    dec_hashes     ir ao estado 20
    condicao       ir ao estado 21
    seleciona      ir ao estado 22
    for_laco       ir ao estado 23
    do_while_laco  ir ao estado 24
    while_laco     ir ao estado 25
    dec_funcao     ir ao estado 26
    def_funcao     ir ao estado 27
    tipo           ir ao estado 28
    var            ir ao estado 29
    referencia     ir ao estado 30
    interpretacao  ir ao estado 31


Estado 1

   39 chamada: T_VAR . T_OPEN arg_null T_CLOSE
  113 var: T_VAR .

    T_OPEN  deslocar, e ir ao estado 32

    $padrão  reduzir usando a regra 113 (var)


Estado 2

  106 tipo: T_TYPE_INT .

    $padrão  reduzir usando a regra 106 (tipo)


Estado 3

  107 tipo: T_TYPE_FLOAT .

    $padrão  reduzir usando a regra 107 (tipo)


Estado 4

  108 tipo: T_TYPE_BOOL .

    $padrão  reduzir usando a regra 108 (tipo)


Estado 5

   16 linha: T_NL .

    $padrão  reduzir usando a regra 16 (linha)


Estado 6

   49 condicao: T_IF . expressao T_NL T_THEN T_OPEN_KEY T_NL linhas_null T_CLOSE_KEY senao

    T_FLOAT       deslocar, e ir ao estado 33
    T_INT         deslocar, e ir ao estado 34
    T_BOOL        deslocar, e ir ao estado 35
    T_VAR         deslocar, e ir ao estado 1
    T_OPEN        deslocar, e ir ao estado 36
    T_MINUS       deslocar, e ir ao estado 37
    T_NOT         deslocar, e ir ao estado 38
    T_CAST_INT    deslocar, e ir ao estado 39
    T_CAST_FLOAT  deslocar, e ir ao estado 40
    T_CAST_BOOL   deslocar, e ir ao estado 41
    T_ADDR        deslocar, e ir ao estado 42
    T_REF         deslocar, e ir ao estado 43

    chamada    ir ao estado 44
    expressao  ir ao estado 45
    primitiva  ir ao estado 46
    var        ir ao estado 47


Estado 7

   52 seleciona: T_SWITCH . T_OPEN expressao T_CLOSE T_OPEN_KEY T_NL caso T_NL T_CLOSE_KEY

    T_OPEN  deslocar, e ir ao estado 48


Estado 8

   56 for_laco: T_FOR . atrib_null T_COMMA expressao T_COMMA atrib_null T_OPEN_KEY T_NL linhas_null T_CLOSE_KEY

    T_VAR  deslocar, e ir ao estado 1
    T_REF  deslocar, e ir ao estado 11

    $padrão  reduzir usando a regra 62 (atrib_null)

    atribuicao   ir ao estado 49
    var_arranjo  ir ao estado 17
    chamada      ir ao estado 50
    atrib_null   ir ao estado 51
    var          ir ao estado 29
    referencia   ir ao estado 30


Estado 9

   59 do_while_laco: T_DO . T_OPEN_KEY T_NL linhas T_CLOSE_KEY T_WHILE expressao

    T_OPEN_KEY  deslocar, e ir ao estado 52


Estado 10

   60 while_laco: T_WHILE . expressao T_OPEN_KEY T_NL linhas T_CLOSE_KEY

    T_FLOAT       deslocar, e ir ao estado 33
    T_INT         deslocar, e ir ao estado 34
    T_BOOL        deslocar, e ir ao estado 35
    T_VAR         deslocar, e ir ao estado 1
    T_OPEN        deslocar, e ir ao estado 36
    T_MINUS       deslocar, e ir ao estado 37
    T_NOT         deslocar, e ir ao estado 38
    T_CAST_INT    deslocar, e ir ao estado 39
    T_CAST_FLOAT  deslocar, e ir ao estado 40
    T_CAST_BOOL   deslocar, e ir ao estado 41
    T_ADDR        deslocar, e ir ao estado 42
    T_REF         deslocar, e ir ao estado 43

    chamada    ir ao estado 44
    expressao  ir ao estado 53
    primitiva  ir ao estado 46
    var        ir ao estado 47


Estado 11

  116 referencia: T_REF .

    $padrão  reduzir usando a regra 116 (referencia)


Estado 12

  118 interpretacao: T_CALC . expressao

    T_FLOAT       deslocar, e ir ao estado 33
    T_INT         deslocar, e ir ao estado 34
    T_BOOL        deslocar, e ir ao estado 35
    T_VAR         deslocar, e ir ao estado 1
    T_OPEN        deslocar, e ir ao estado 36
    T_MINUS       deslocar, e ir ao estado 37
    T_NOT         deslocar, e ir ao estado 38
    T_CAST_INT    deslocar, e ir ao estado 39
    T_CAST_FLOAT  deslocar, e ir ao estado 40
    T_CAST_BOOL   deslocar, e ir ao estado 41
    T_ADDR        deslocar, e ir ao estado 42
    T_REF         deslocar, e ir ao estado 43

    chamada    ir ao estado 44
    expressao  ir ao estado 54
    primitiva  ir ao estado 46
    var        ir ao estado 47


Estado 13

    0 $accept: programa . $end

    $end  deslocar, e ir ao estado 55


Estado 14

    1 programa: linhas .
    3 linhas: linhas . linha

    T_VAR         deslocar, e ir ao estado 1
    T_TYPE_INT    deslocar, e ir ao estado 2
    T_TYPE_FLOAT  deslocar, e ir ao estado 3
    T_TYPE_BOOL   deslocar, e ir ao estado 4
    T_NL          deslocar, e ir ao estado 5
    T_IF          deslocar, e ir ao estado 6
    T_SWITCH      deslocar, e ir ao estado 7
    T_FOR         deslocar, e ir ao estado 8
    T_DO          deslocar, e ir ao estado 9
    T_WHILE       deslocar, e ir ao estado 10
    T_REF         deslocar, e ir ao estado 11
    T_CALC        deslocar, e ir ao estado 12

    $padrão  reduzir usando a regra 1 (programa)

    linha          ir ao estado 56
    atribuicao     ir ao estado 16
    var_arranjo    ir ao estado 17
    declaracao     ir ao estado 18
    chamada        ir ao estado 19
    dec_hashes     ir ao estado 20
    condicao       ir ao estado 21
    seleciona      ir ao estado 22
    for_laco       ir ao estado 23
    do_while_laco  ir ao estado 24
    while_laco     ir ao estado 25
    dec_funcao     ir ao estado 26
    def_funcao     ir ao estado 27
    tipo           ir ao estado 28
    var            ir ao estado 29
    referencia     ir ao estado 30
    interpretacao  ir ao estado 31


Estado 15

    2 linhas: linha .

    $padrão  reduzir usando a regra 2 (linhas)


Estado 16

    4 linha: atribuicao . T_NL

    T_NL  deslocar, e ir ao estado 57


Estado 17

   17 atribuicao: var_arranjo . T_EQUAL expressao

    T_EQUAL  deslocar, e ir ao estado 58


Estado 18

    5 linha: declaracao . T_NL

    T_NL  deslocar, e ir ao estado 59


Estado 19

   14 linha: chamada . T_NL
   19 var_arranjo: chamada .

    T_NL  deslocar, e ir ao estado 60

    $padrão  reduzir usando a regra 19 (var_arranjo)


Estado 20

    6 linha: dec_hashes .

    $padrão  reduzir usando a regra 6 (linha)


Estado 21

    9 linha: condicao . T_NL

    T_NL  deslocar, e ir ao estado 61


Estado 22

   10 linha: seleciona . T_NL

    T_NL  deslocar, e ir ao estado 62


Estado 23

   11 linha: for_laco . T_NL

    T_NL  deslocar, e ir ao estado 63


Estado 24

   12 linha: do_while_laco . T_NL

    T_NL  deslocar, e ir ao estado 64


Estado 25

   13 linha: while_laco . T_NL

    T_NL  deslocar, e ir ao estado 65


Estado 26

    7 linha: dec_funcao . T_NL

    T_NL  deslocar, e ir ao estado 66


Estado 27

    8 linha: def_funcao . T_NL

    T_NL  deslocar, e ir ao estado 67


Estado 28

   22 declaracao: tipo . variaveis
   45 dec_hashes: tipo . T_COLON tipo hashes
   63 dec_funcao: tipo . T_FUN T_VAR T_OPEN param_null T_CLOSE
   64           | tipo . T_OPEN T_CLOSE T_FUN T_VAR T_OPEN param_null T_CLOSE
   65           | tipo . T_OPEN T_CLOSE T_OPEN T_CLOSE T_FUN T_VAR T_OPEN param_null T_CLOSE
   66           | tipo . T_COLON tipo T_FUN T_VAR T_OPEN param_null T_CLOSE
   67 def_funcao: tipo . T_FUN T_VAR T_OPEN param_null T_CLOSE T_OPEN_KEY T_NL linhas_funcao T_RET retorno T_NL T_CLOSE_KEY
   68           | tipo . T_OPEN T_CLOSE T_FUN T_VAR T_OPEN param_null T_CLOSE T_OPEN_KEY T_NL linhas_funcao T_RET retorno T_NL T_CLOSE_KEY
   69           | tipo . T_OPEN T_CLOSE T_OPEN T_CLOSE T_FUN T_VAR T_OPEN param_null T_CLOSE T_OPEN_KEY T_NL linhas_funcao T_RET retorno T_NL T_CLOSE_KEY
   70           | tipo . T_COLON tipo T_FUN T_VAR T_OPEN param_null T_CLOSE T_OPEN_KEY T_NL linhas_funcao T_RET retorno T_NL T_CLOSE_KEY

    T_VAR    deslocar, e ir ao estado 68
    T_OPEN   deslocar, e ir ao estado 69
    T_COLON  deslocar, e ir ao estado 70
    T_FUN    deslocar, e ir ao estado 71
    T_REF    deslocar, e ir ao estado 11

    atribuicao   ir ao estado 72
    var_arranjo  ir ao estado 17
    variaveis    ir ao estado 73
    variavel     ir ao estado 74
    def_arranjo  ir ao estado 75
    dec_arranjo  ir ao estado 76
    chamada      ir ao estado 50
    var          ir ao estado 77
    referencia   ir ao estado 78


Estado 29

   18 var_arranjo: var .

    $padrão  reduzir usando a regra 18 (var_arranjo)


Estado 30

   20 var_arranjo: referencia . var
   21            | referencia . chamada
  117 referencia: referencia . T_REF

    T_VAR  deslocar, e ir ao estado 1
    T_REF  deslocar, e ir ao estado 79

    chamada  ir ao estado 80
    var      ir ao estado 81


Estado 31

   15 linha: interpretacao . T_NL

    T_NL  deslocar, e ir ao estado 82


Estado 32

   39 chamada: T_VAR T_OPEN . arg_null T_CLOSE

    T_FLOAT       deslocar, e ir ao estado 33
    T_INT         deslocar, e ir ao estado 34
    T_BOOL        deslocar, e ir ao estado 35
    T_VAR         deslocar, e ir ao estado 1
    T_OPEN        deslocar, e ir ao estado 36
    T_MINUS       deslocar, e ir ao estado 37
    T_NOT         deslocar, e ir ao estado 38
    T_CAST_INT    deslocar, e ir ao estado 39
    T_CAST_FLOAT  deslocar, e ir ao estado 40
    T_CAST_BOOL   deslocar, e ir ao estado 41
    T_ADDR        deslocar, e ir ao estado 42
    T_REF         deslocar, e ir ao estado 43

    $padrão  reduzir usando a regra 41 (arg_null)

    chamada     ir ao estado 44
    arg_null    ir ao estado 83
    argumentos  ir ao estado 84
    argumento   ir ao estado 85
    expressao   ir ao estado 86
    primitiva   ir ao estado 46
    var         ir ao estado 47


Estado 33

  112 primitiva: T_FLOAT .

    $padrão  reduzir usando a regra 112 (primitiva)


Estado 34

  111 primitiva: T_INT .

    $padrão  reduzir usando a regra 111 (primitiva)


Estado 35

  110 primitiva: T_BOOL .

    $padrão  reduzir usando a regra 110 (primitiva)


Estado 36

   90 expressao: T_OPEN . expressao T_CLOSE
  105          | T_OPEN . expressao T_ATRIB_ASK expressao T_COLON expressao T_CLOSE

    T_FLOAT       deslocar, e ir ao estado 33
    T_INT         deslocar, e ir ao estado 34
    T_BOOL        deslocar, e ir ao estado 35
    T_VAR         deslocar, e ir ao estado 1
    T_OPEN        deslocar, e ir ao estado 36
    T_MINUS       deslocar, e ir ao estado 37
    T_NOT         deslocar, e ir ao estado 38
    T_CAST_INT    deslocar, e ir ao estado 39
    T_CAST_FLOAT  deslocar, e ir ao estado 40
    T_CAST_BOOL   deslocar, e ir ao estado 41
    T_ADDR        deslocar, e ir ao estado 42
    T_REF         deslocar, e ir ao estado 43

    chamada    ir ao estado 44
    expressao  ir ao estado 87
    primitiva  ir ao estado 46
    var        ir ao estado 47


Estado 37

   85 expressao: T_MINUS . expressao

    T_FLOAT       deslocar, e ir ao estado 33
    T_INT         deslocar, e ir ao estado 34
    T_BOOL        deslocar, e ir ao estado 35
    T_VAR         deslocar, e ir ao estado 1
    T_OPEN        deslocar, e ir ao estado 36
    T_MINUS       deslocar, e ir ao estado 37
    T_NOT         deslocar, e ir ao estado 38
    T_CAST_INT    deslocar, e ir ao estado 39
    T_CAST_FLOAT  deslocar, e ir ao estado 40
    T_CAST_BOOL   deslocar, e ir ao estado 41
    T_ADDR        deslocar, e ir ao estado 42
    T_REF         deslocar, e ir ao estado 43

    chamada    ir ao estado 44
    expressao  ir ao estado 88
    primitiva  ir ao estado 46
    var        ir ao estado 47


Estado 38

   86 expressao: T_NOT . expressao

    T_FLOAT       deslocar, e ir ao estado 33
    T_INT         deslocar, e ir ao estado 34
    T_BOOL        deslocar, e ir ao estado 35
    T_VAR         deslocar, e ir ao estado 1
    T_OPEN        deslocar, e ir ao estado 36
    T_MINUS       deslocar, e ir ao estado 37
    T_NOT         deslocar, e ir ao estado 38
    T_CAST_INT    deslocar, e ir ao estado 39
    T_CAST_FLOAT  deslocar, e ir ao estado 40
    T_CAST_BOOL   deslocar, e ir ao estado 41
    T_ADDR        deslocar, e ir ao estado 42
    T_REF         deslocar, e ir ao estado 43

    chamada    ir ao estado 44
    expressao  ir ao estado 89
    primitiva  ir ao estado 46
    var        ir ao estado 47


Estado 39

   87 expressao: T_CAST_INT . expressao

    T_FLOAT       deslocar, e ir ao estado 33
    T_INT         deslocar, e ir ao estado 34
    T_BOOL        deslocar, e ir ao estado 35
    T_VAR         deslocar, e ir ao estado 1
    T_OPEN        deslocar, e ir ao estado 36
    T_MINUS       deslocar, e ir ao estado 37
    T_NOT         deslocar, e ir ao estado 38
    T_CAST_INT    deslocar, e ir ao estado 39
    T_CAST_FLOAT  deslocar, e ir ao estado 40
    T_CAST_BOOL   deslocar, e ir ao estado 41
    T_ADDR        deslocar, e ir ao estado 42
    T_REF         deslocar, e ir ao estado 43

    chamada    ir ao estado 44
    expressao  ir ao estado 90
    primitiva  ir ao estado 46
    var        ir ao estado 47


Estado 40

   88 expressao: T_CAST_FLOAT . expressao

    T_FLOAT       deslocar, e ir ao estado 33
    T_INT         deslocar, e ir ao estado 34
    T_BOOL        deslocar, e ir ao estado 35
    T_VAR         deslocar, e ir ao estado 1
    T_OPEN        deslocar, e ir ao estado 36
    T_MINUS       deslocar, e ir ao estado 37
    T_NOT         deslocar, e ir ao estado 38
    T_CAST_INT    deslocar, e ir ao estado 39
    T_CAST_FLOAT  deslocar, e ir ao estado 40
    T_CAST_BOOL   deslocar, e ir ao estado 41
    T_ADDR        deslocar, e ir ao estado 42
    T_REF         deslocar, e ir ao estado 43

    chamada    ir ao estado 44
    expressao  ir ao estado 91
    primitiva  ir ao estado 46
    var        ir ao estado 47


Estado 41

   89 expressao: T_CAST_BOOL . expressao

    T_FLOAT       deslocar, e ir ao estado 33
    T_INT         deslocar, e ir ao estado 34
    T_BOOL        deslocar, e ir ao estado 35
    T_VAR         deslocar, e ir ao estado 1
    T_OPEN        deslocar, e ir ao estado 36
    T_MINUS       deslocar, e ir ao estado 37
    T_NOT         deslocar, e ir ao estado 38
    T_CAST_INT    deslocar, e ir ao estado 39
    T_CAST_FLOAT  deslocar, e ir ao estado 40
    T_CAST_BOOL   deslocar, e ir ao estado 41
    T_ADDR        deslocar, e ir ao estado 42
    T_REF         deslocar, e ir ao estado 43

    chamada    ir ao estado 44
    expressao  ir ao estado 92
    primitiva  ir ao estado 46
    var        ir ao estado 47


Estado 42

   92 expressao: T_ADDR . expressao

    T_FLOAT       deslocar, e ir ao estado 33
    T_INT         deslocar, e ir ao estado 34
    T_BOOL        deslocar, e ir ao estado 35
    T_VAR         deslocar, e ir ao estado 1
    T_OPEN        deslocar, e ir ao estado 36
    T_MINUS       deslocar, e ir ao estado 37
    T_NOT         deslocar, e ir ao estado 38
    T_CAST_INT    deslocar, e ir ao estado 39
    T_CAST_FLOAT  deslocar, e ir ao estado 40
    T_CAST_BOOL   deslocar, e ir ao estado 41
    T_ADDR        deslocar, e ir ao estado 42
    T_REF         deslocar, e ir ao estado 43

    chamada    ir ao estado 44
    expressao  ir ao estado 93
    primitiva  ir ao estado 46
    var        ir ao estado 47


Estado 43

   91 expressao: T_REF . expressao

    T_FLOAT       deslocar, e ir ao estado 33
    T_INT         deslocar, e ir ao estado 34
    T_BOOL        deslocar, e ir ao estado 35
    T_VAR         deslocar, e ir ao estado 1
    T_OPEN        deslocar, e ir ao estado 36
    T_MINUS       deslocar, e ir ao estado 37
    T_NOT         deslocar, e ir ao estado 38
    T_CAST_INT    deslocar, e ir ao estado 39
    T_CAST_FLOAT  deslocar, e ir ao estado 40
    T_CAST_BOOL   deslocar, e ir ao estado 41
    T_ADDR        deslocar, e ir ao estado 42
    T_REF         deslocar, e ir ao estado 43

    chamada    ir ao estado 44
    expressao  ir ao estado 94
    primitiva  ir ao estado 46
    var        ir ao estado 47


Estado 44

   84 expressao: chamada .

    $padrão  reduzir usando a regra 84 (expressao)


Estado 45

   49 condicao: T_IF expressao . T_NL T_THEN T_OPEN_KEY T_NL linhas_null T_CLOSE_KEY senao
   93 expressao: expressao . T_PLUS expressao
   94          | expressao . T_MINUS expressao
   95          | expressao . T_TIMES expressao
   96          | expressao . T_DIV expressao
   97          | expressao . T_AND expressao
   98          | expressao . T_OR expressao
   99          | expressao . T_EQUAL2 expressao
  100          | expressao . T_DIF expressao
  101          | expressao . T_HIGHER expressao
  102          | expressao . T_HIGH expressao
  103          | expressao . T_LOWER expressao
  104          | expressao . T_LOW expressao

    T_NL      deslocar, e ir ao estado 95
    T_PLUS    deslocar, e ir ao estado 96
    T_MINUS   deslocar, e ir ao estado 97
    T_TIMES   deslocar, e ir ao estado 98
    T_DIV     deslocar, e ir ao estado 99
    T_AND     deslocar, e ir ao estado 100
    T_OR      deslocar, e ir ao estado 101
    T_EQUAL2  deslocar, e ir ao estado 102
    T_DIF     deslocar, e ir ao estado 103
    T_HIGHER  deslocar, e ir ao estado 104
    T_HIGH    deslocar, e ir ao estado 105
    T_LOWER   deslocar, e ir ao estado 106
    T_LOW     deslocar, e ir ao estado 107


Estado 46

   83 expressao: primitiva .

    $padrão  reduzir usando a regra 83 (expressao)


Estado 47

  109 primitiva: var .

    $padrão  reduzir usando a regra 109 (primitiva)


Estado 48

   52 seleciona: T_SWITCH T_OPEN . expressao T_CLOSE T_OPEN_KEY T_NL caso T_NL T_CLOSE_KEY

    T_FLOAT       deslocar, e ir ao estado 33
    T_INT         deslocar, e ir ao estado 34
    T_BOOL        deslocar, e ir ao estado 35
    T_VAR         deslocar, e ir ao estado 1
    T_OPEN        deslocar, e ir ao estado 36
    T_MINUS       deslocar, e ir ao estado 37
    T_NOT         deslocar, e ir ao estado 38
    T_CAST_INT    deslocar, e ir ao estado 39
    T_CAST_FLOAT  deslocar, e ir ao estado 40
    T_CAST_BOOL   deslocar, e ir ao estado 41
    T_ADDR        deslocar, e ir ao estado 42
    T_REF         deslocar, e ir ao estado 43

    chamada    ir ao estado 44
    expressao  ir ao estado 108
    primitiva  ir ao estado 46
    var        ir ao estado 47


Estado 49

   61 atrib_null: atribuicao .

    $padrão  reduzir usando a regra 61 (atrib_null)


Estado 50

   19 var_arranjo: chamada .

    $padrão  reduzir usando a regra 19 (var_arranjo)


Estado 51

   56 for_laco: T_FOR atrib_null . T_COMMA expressao T_COMMA atrib_null T_OPEN_KEY T_NL linhas_null T_CLOSE_KEY

    T_COMMA  deslocar, e ir ao estado 109


Estado 52

   59 do_while_laco: T_DO T_OPEN_KEY . T_NL linhas T_CLOSE_KEY T_WHILE expressao

    T_NL  deslocar, e ir ao estado 110


Estado 53

   60 while_laco: T_WHILE expressao . T_OPEN_KEY T_NL linhas T_CLOSE_KEY
   93 expressao: expressao . T_PLUS expressao
   94          | expressao . T_MINUS expressao
   95          | expressao . T_TIMES expressao
   96          | expressao . T_DIV expressao
   97          | expressao . T_AND expressao
   98          | expressao . T_OR expressao
   99          | expressao . T_EQUAL2 expressao
  100          | expressao . T_DIF expressao
  101          | expressao . T_HIGHER expressao
  102          | expressao . T_HIGH expressao
  103          | expressao . T_LOWER expressao
  104          | expressao . T_LOW expressao
